@@ -28,7 +28,6 @@ kn service delete NAME [NAME ...]
 
 ```
       --all                Delete all services in a namespace.
-      --async              DEPRECATED: please use --no-wait instead. Do not wait for 'service delete' operation to be completed. (default true)
   -h, --help               help for delete
   -n, --namespace string   Specify the namespace to operate in.
       --no-wait            Do not wait for 'service delete' operation to be completed. (default true)
