@@ -22,6 +22,10 @@
 | https://github.com/knative/client/pull/1092[#1092]
 
 | 🐣
+| Drop deprecated --async flag support
+| https://github.com/knative/client/pull/1094[#1094]
+
+| 🐣
 | Uniform multiple writeSink to DescribeSink
 | https://github.com/knative/client/pull/1075[#1075]
 
